module(
    name = "osqp-eigen",
    version = "0.10.3",
    bazel_compatibility = [">=7.2.1"],
    compatibility_level = 1,
)

# This dependency can only be used from bazel-central-registry
bazel_dep(name = "rules_cc", version = "0.1.1")

# These depenencies can be overriden using conda ones
bazel_dep(name = "eigen", version = "3.4.0.bcr.3")
bazel_dep(name = "osqp", version = "1.0.0")
bazel_dep(name = "catch2", version = "3.8.0")
